--- a/main_app/templates/all_template/all_news.html
+++ b/main_app/templates/all_template/all_news.html
@@ -161,7 +161,6 @@
     align-items: center;
 
 
-
   }
 
 
@@ -382,7 +381,6 @@
         
       </div>
     </div>
-
     <!-- end of header -->
 
     <!-- main wrapper -->
@@ -505,7 +503,7 @@
         </script>
         <script>
           function goBack() {
-            history.back(); // به صفحه قبلی بازگرد
+            history.back();
           }
           window.addEventListener('popstate', function (event) {
             const url = document.location.pathname;
